--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "AdminTemplate",
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0"
+    "angular-route": "~1.4.0",
+    "angular-animate": "~1.4.0",
+    "angular-material": "~0.9.8"
   }
 }
