--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/patrick93/AdminTemplate/issues"
   },
-  "homepage": "https://github.com/patrick93/AdminTemplate#readme"
+  "homepage": "https://github.com/patrick93/AdminTemplate#readme",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "^4.2.0-beta.1",
+    "grunt-wiredep": "^2.0.0",
+    "load-grunt-tasks": "^3.2.0"
+  }
 }
