--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,6 @@
     "angular": "~1.4.0",
     "angular-route": "~1.4.0",
     "angular-animate": "~1.4.0",
-    "angular-material": "~0.9.8"
+    "angular-material": "~0.10.0",
   }
 }
