--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "AdminTemplate",
   "dependencies": {
-    "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-animate": "~1.4.0",
-    "angular-material": "~0.10.1",
-    "angular-messages": "~1.4.3"
+    "angular": "1.3.15",
+    "angular-route": "1.3.15",
+    "angular-aria": "1.3.15",
+    "angular-animate": "1.3.15",
+    "angular-messages": "1.3.15",
+    "angular-material": "0.11.0"
   }
 }
