--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^1.1.2",
     "grunt-ts": "^4.2.0-beta.1",
     "grunt-wiredep": "^2.0.0",
     "load-grunt-tasks": "^3.2.0"
