--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     ],
     "files": [
         "./app/app.ts",
+        "./app/components/demo/forms/general/generalFormsController.ts",
         "./app/components/demo/home/homeController.ts",
         "./app/components/demo/wizard/wizardController.ts",
         "./app/components/directives/menu/menuDirective.ts",
